load("@aspect_bazel_lib//lib:tar.bzl", "mtree_spec", "tar")
load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@pip_aarch64-apple-darwin//:requirements.bzl", requirement_aarch64_apple_darwin = "requirement")
load("@pip_x86_64-unknown-linux//:requirements.bzl", requirement_x86_64_unknown_linux = "requirement")
load("@rules_python//python/pip_install:repositories.bzl", requirement_builtin = "requirement")

py_binary(
    name = "paddle_ocr",
    srcs = ["main.py"],
    data = [
        "@ch_ppocr_mobile_v2.0_cls_infer//:inference.pdiparams",
        "@ch_ppocr_mobile_v2.0_cls_infer//:inference.pdiparams.info",
        "@ch_ppocr_mobile_v2.0_cls_infer//:inference.pdmodel",
        "@en_PP-OCRv3_det_infer//:inference.pdiparams",
        "@en_PP-OCRv3_det_infer//:inference.pdiparams.info",
        "@en_PP-OCRv3_det_infer//:inference.pdmodel",
        "@en_PP-OCRv4_rec_infer//:inference.pdiparams",
        "@en_PP-OCRv4_rec_infer//:inference.pdiparams.info",
        "@en_PP-OCRv4_rec_infer//:inference.pdmodel",
    ],
    env = {
        "PADDLE_DET_MODEL": "$$(dirname $$RUNFILES_DIR/$(rlocationpath @en_PP-OCRv3_det_infer//:inference.pdiparams))",
        "PADDLE_REC_MODEL": "$$(dirname $$RUNFILES_DIR/$(rlocationpath @en_PP-OCRv4_rec_infer//:inference.pdiparams))",
        "PADDLE_CLS_MODEL": "$$(dirname $$RUNFILES_DIR/$(rlocationpath @ch_ppocr_mobile_v2.0_cls_infer//:inference.pdiparams))",
    },
    main = "main.py",
    visibility = ["//cmd/serve:__pkg__"],
    deps = [
        requirement_builtin("setuptools"),
    ] + select({
        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
            requirement_x86_64_unknown_linux("absl-py"),
            requirement_x86_64_unknown_linux("fastapi"),
            requirement_x86_64_unknown_linux("paddleocr"),
            requirement_x86_64_unknown_linux("paddlepaddle"),
            requirement_x86_64_unknown_linux("pykka"),
            requirement_x86_64_unknown_linux("python-multipart"),
            requirement_x86_64_unknown_linux("uvicorn"),
        ],
        "@rules_rust//rust/platform:aarch64-apple-darwin": [
            requirement_aarch64_apple_darwin("absl-py"),
            requirement_aarch64_apple_darwin("fastapi"),
            requirement_aarch64_apple_darwin("paddleocr"),
            requirement_aarch64_apple_darwin("paddlepaddle"),
            requirement_aarch64_apple_darwin("pykka"),
            requirement_aarch64_apple_darwin("python-multipart"),
            requirement_aarch64_apple_darwin("uvicorn"),
        ],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

mtree_spec(
    name = "mtree",
    srcs = [":paddle_ocr"],
)

tar(
    name = "tar",
    srcs = [":paddle_ocr"],
    mtree = ":mtree",
    visibility = ["//cmd/serve:__pkg__"],
)
