load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//web:next/package_json.bzl", next_bin = "bin")

npm_link_all_packages(name = "node_modules")
next_bin.next_binary(name = "next_cli")

NEXT = [
  "//web/app",
  "//web/public",
  "next.config.mjs",
  "postcss.config.js",
  "tailwind.config.ts",
  "tsconfig.json",
  ":node_modules/@types/node",
  ":node_modules/autoprefixer",
  ":node_modules/react",
  ":node_modules/tailwindcss",
  ":node_modules/typescript",
]

js_run_devserver(
  name = "dev",
  tool = ":next_cli",
  args = ["dev"],
  chdir = package_name(),
  data = NEXT,
)

next_bin.next(
  name = "web",
  args = ["build"],
  chdir = package_name(),
  out_dirs = [".next"],
  srcs = NEXT,
  visibility = ["//:__pkg__"],
)
