load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//web:next/package_json.bzl", next_bin = "bin")

npm_link_all_packages(name = "node_modules")

next_bin.next_binary(name = "next_cli")

NEXT = [
    "//web/app",
    "//web/public",
    "next.config.mjs",
    "postcss.config.js",
    "tailwind.config.ts",
    "tsconfig.json",
    ":node_modules/@types/node",
    ":node_modules/autoprefixer",
    ":node_modules/react",
    ":node_modules/tailwindcss",
    ":node_modules/typescript",
]

js_run_devserver(
    name = "dev",
    args = ["dev"],
    chdir = package_name(),
    data = NEXT,
    tool = ":next_cli",
)

next_bin.next(
    name = "web",
    srcs = NEXT,
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["out"],
    visibility = ["//cmd/serve:__pkg__"],
)
