load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "create_receipt",
    srcs = ["create_receipt.go"],
    importpath = "github.com/sunb26/xat/handler/create_receipt",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_lib_pq//:pq",
    ],
)
