load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "get_receipt",
    srcs = ["get_receipt.go"],
    importpath = "github.com/sunb26/xat/handler/get_receipt",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_mux//:mux",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_lib_pq//:pq",
    ],
)
