load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "list_receipts",
    srcs = ["list_receipts.go"],
    importpath = "github.com/sunb26/xat/handler/list_receipts",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_mux//:mux",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_lib_pq//:pq",
    ],
)
