load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "components",
    srcs = [
        "mailing.tsx",
        "receiptForm.tsx",
        "userInfo.tsx",
        "navbar.tsx",
    ],
    visibility = ["//web:__pkg__"],
    deps = [
        "//web:node_modules/@nextui-org/react",
        "//web:node_modules/@clerk/clerk-react",
    ],
)
